2013-10-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.7 release procedure:
 	Changes since nco-4_3_6: --mrd, --hdf4
	cd ~/nco;cvs tag -d nco-4_3_7;cvs tag -d nco-4_3_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.7 release"
	cvs tag -c nco-4_3_7;cvs tag -c nco-4_3_7-1

	* Wrote nm2sng_cdl() to CDL-ize variable/dimension/attribute names

	* ncrename and ncatted do not work on HDF4 files because they
	attempt to modify the file on disk. netCDF4 cannot directly modify
	an HDF4 file. Rather, netCDF4 can read HDF4 files through the API.
	All other operators work because they construct the output file
	through the API. They never directly modify the HDF4 file.
	ncrename and ncatted, on the other hand, always attempt to
	directly modify the HDF4 file. The solution would be to make the
	--hdf4 switch trigger an API-based copy in ncrename and ncatted.

	* All operators with --hdf4 (except ncrename and ncatted) appear to work with HDF4 files

	* Add arithmetic functions for NC_BYTE and NC_UBYTE

2013-10-04  Charlie Zender  <zender@uci.edu>

	* Add --hdf4 switch to all operators except ncrename and ncatted

	* ncbo --hdf4 does arithmetic on (some) HDF4 files correctly!

	* ncks --hdf4 prints and writes (some) HDF4 files correctly!

	* Add --hdf4 flag to prevent NCO from interrogating compression/chunking on HDF4 files

	* First builds with --enable-hdf4

	* Skeleton ncga loops

	* Support CF versioning in ncdismember

2013-10-03  Charlie Zender  <zender@uci.edu>

	* Add ncga stubs to ncra.c

	* Tidy ncra.c

	* Document --mrd

	* Add --mrd = --multiple_record_dimension switch to allow ncecat,
	ncpdq to increase number of record dimensions in a variable as a
	natural or incidental consequence of processing netCDF4 files

2013-10-02  Charlie Zender  <zender@uci.edu>

	* cd ~/nco;cvs commit -m "Snapshot after move to Allura"
	cvs tag -c nco-4_3_7_postallura

	* Move SF NCO repository to Allura

	* cd ~/nco;cvs commit -m "Snapshot before move to Allura"